--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ environs = {extras = ["django"],version = "==8.0.0"}
 psycopg2-binary = "==2.8.5"
 whitenoise = "==5.1.0"
 gunicorn = "==19.9.0"
+django-crispy-forms = "==1.9.2"
 
 [requires]
 python_version = "3.7"
